@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection

class WeightedCostStrategy
class CarbonCostStrategy
class MonetaryCostStrategy

WeightedCostStrategy ..|> CostStrategy
MonetaryCostStrategy ..|> CostStrategy
CarbonCostStrategy ..|> CostStrategy


WeightedCostStrategy --> MonetaryCostStrategy
WeightedCostStrategy --> CarbonCostStrategy

interface CostStrategy {
+getCost(ShipmentOption) : ShipmentCost
}

@enduml